Updated CState removal parameter in config.yml

--- a/config.yml
+++ b/config.yml
@@ -379,6 +379,8 @@ params:
   # Default: UA-00000000-1
   googleAnalytics: UA-00000000-1
 
+  showPoweredBy: false
+
 # These options affect the core of cState.
 # Please do not change them if you do not
 # know what you are doing.
