Changed header colour

--- a/config.yml
+++ b/config.yml
@@ -347,7 +347,7 @@ params:
   # disrupted: "#cc4400"
   # down: "#e60000"
   # notice: "#24478f"
-  brand: "#0a0c0f"
+  brand: "#181a1b"
   ok: "#008000"
   disrupted: "#cc4400"
   down: "#e60000"
