--- a/config.yml
+++ b/config.yml
@@ -297,7 +297,7 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: italogo.png
+  logo: ITALogoWhite.png
 
   # This is the description that is shown
   # on the footer and meta tags.
